# FilmKilns

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines-1.yml  azure-pipelines-fk.yml  azure-pipelines.yml  build.gradle  rules-tiny.txt  settings.gradle
proj/FkAndroid/fkandroid/: CMakeLists.txt  build.gradle  build.gradle.kts  cpp_sources.json
src/FkBitmap/: CMakeLists.txt
src/FkBitmap/core/: FkBitmap.cpp  FkImage.cpp
src/FkBitmap/include/: FkBitmap.h  FkBitmapDefinition.h  FkImage.h
src/FkCodec/: CMakeLists.txt
src/FkCodec/codec/: FkCodec.cpp  FkFFCodec.cpp  FkMediaTrack.cpp
src/FkCodec/encoder/: FkAbsEncoder.cpp  FkAbsVideoEncoder.cpp  FkAsyncEncoder.cpp  FkFFEncoder.cpp
src/FkCodec/entity/: FkAbsFrame.cpp  FkAbsMediaFrame.cpp  FkAbsPacket.cpp  FkAudioFrame.cpp  FkFFPacket.cpp  FkFFramePacket.cpp  FkPacket.cpp  FkPacket2.cpp  FkSampleFormat.cpp  FkTexFrame.cpp  FkVideoFrame.cpp
src/FkCodec/ff/: FkFFMediaContext.cpp  FkFFMediaTrack.cpp
src/FkCodec/include/: FkAbsDeMuxer.h  FkAbsEncoder.h  FkAbsFrame.h  FkAbsMediaFrame.h  FkAbsMuxer.h  FkAbsPacket.h  FkAbsVideoEncoder.h  FkAsyncEncoder.h  FkAudioFrame.h  FkAudioTranslator.h  FkCodec.h  FkCodecDefinition.h  FkFFCodec.h  FkFFDeMuxer.h  FkFFEncoder.h  FkFFMediaContext.h  FkFFMediaTrack.h  FkFFMuxer.h  FkFFPacket.h  FkFFUtils.h  FkFFramePacket.h  FkFrameAllocator.h  FkFrameFormat.h  FkMediaTrack.h  FkPacket.h  FkPacket2.h  FkSampleFormat.h  FkSourcesAllocator.h  FkTexFrame.h  FkVideoFrame.h
src/FkCodec/muxer/: FkAbsDeMuxer.cpp  FkAbsMuxer.cpp  FkFFDeMuxer.cpp  FkFFMuxer.cpp
src/FkCodec/sources/: FkFrameAllocator.cpp  FkSourcesAllocator.cpp
src/FkCodec/transform/: FkAudioTranslator.cpp
src/FkCodec/utils/: FkFFUtils.cpp
src/FkExport/: CMakeLists.txt
src/FkFramework/: CMakeLists.txt
src/FkFramework/atom/: FkIncrease2Atom.cpp  FkSimpleIncrease2Atom.cpp
src/FkFramework/client/: FkLocalClient.cpp  FkRemoteClient.cpp
src/FkFramework/core/: FkAtom.cpp  FkEmptyQuark.cpp  FkEngine.cpp  FkEngineSettings.cpp  FkMolecule.cpp  FkPort.cpp  FkPortDesc.cpp  FkProtocol.cpp  FkQuark.cpp  FkSession.cpp  FkSessionClient.cpp  FkSessionExecutor.cpp  FkSimpleAtom.cpp  FkSimpleMolecule.cpp
src/FkFramework/entity/: FkEngineContext.cpp  FkPortDesc.cpp  FkProtDesc.cpp  FkQuarkContext.cpp
src/FkFramework/include/: FkAtom.h  FkCalculateProt.h  FkCalculatePrt.h  FkComponent.h  FkDecreaseQuark.h  FkDivideQuark.h  FkEmptyQuark.h  FkEngine.h  FkEngineContext.h  FkEngineMonitor.h  FkEngineSettings.h  FkEntity.h  FkFrameworkDefine.h  FkHelloProt.h  FkHelloQuark.h  FkIncrease2Atom.h  FkIncreaseQuark.h  FkLocalClient.h  FkMolecule.h  FkOnCreateProt.h  FkOnCreatePrt.h  FkOnDestroyProt.h  FkOnDestroyPrt.h  FkOnStartProt.h  FkOnStartPrt.h  FkOnStopProt.h  FkOnStopPrt.h  FkPort.h  FkPortDesc.h  FkProtDesc.h  FkProtocol.h  FkQuark.h  FkQuarkContext.h  FkRemoteClient.h  FkSayProt.h  FkSession.h  FkSessionClient.h  FkSessionExecutor.h  FkSimpleAtom.h  FkSimpleIncrease2Atom.h  (+1 more)
src/FkFramework/monitor/: FkEngineMonitor.cpp
src/FkFramework/prot/: FkCalculateProt.cpp  FkHelloProt.cpp  FkOnCreateProt.cpp  FkOnDestroyProt.cpp  FkOnStartProt.cpp  FkOnStopProt.cpp  FkSayProt.cpp
src/FkFramework/protocol/: FkCalculatePrt.cpp  FkOnCreatePrt.cpp  FkOnDestroyPrt.cpp  FkOnStartPrt.cpp  FkOnStopPrt.cpp
src/FkFramework/quark/: FkDecreaseQuark.cpp  FkDivideQuark.cpp  FkHelloQuark.cpp  FkIncreaseQuark.cpp
src/FkGraphic/: CMakeLists.txt
src/FkGraphic/component/: FkAnyCompo.cpp  FkBufCompo.cpp  FkBufferComponent.cpp  FkCharMapCompo.cpp  FkColorCompo.cpp  FkColorComponent.cpp  FkContextCompo.cpp  FkCoordinateCompo.cpp  FkCoordinateComponent.cpp  FkCropComponent.cpp  FkDeviceImageCompo.cpp  FkFboCompo.cpp  FkFilePathCompo.cpp  FkFloatVec2Compo.cpp  FkFormatCompo.cpp  FkFuncCompo.cpp  FkGraphicComponent.cpp  FkGraphicCtxComponent.cpp  FkGraphicProgramComponent.cpp  FkGraphicTexComponent.cpp  FkGridSizeCompo.cpp  FkMatCompo.cpp  FkMaterialCompo.cpp  FkMaterialComponent.cpp  FkMatrixComponent.cpp  FkNewBmpTexProto.cpp  FkPathCompo.cpp  FkPointComponent.cpp  FkPointFCompo.cpp  FkPointVertexCompo.cpp  FkPositionComponent.cpp  FkRenderProgramCompo.cpp  FkRotateComponent.cpp  FkScaleComponent.cpp  FkScaleTypeComponent.cpp  FkSizeCompo.cpp  FkStrCompo.cpp  FkTexArrayCompo.cpp  FkTexCompo.cpp  FkTexComponent.cpp  (+10 more)
src/FkGraphic/core/: FkGraphicContext.cpp  FkGraphicFrameObject.cpp  FkGraphicMatProgram.cpp  FkGraphicProgram.cpp  FkGraphicRender.cpp  FkGraphicTexture.cpp  FkGraphicWindow.cpp  FkMVPMatrix.cpp  FkOffWindow.cpp  FkRenderEngineSettings.cpp  FkTextureCharMap.cpp  FkVertexObject.cpp
src/FkGraphic/engine/: FkLayerEngine.cpp  FkRenderEngine.cpp
src/FkGraphic/entity/: FkDeviceEntity.cpp  FkEnvEntity.cpp  FkGraphicEntity.cpp  FkGraphicLayer.cpp  FkMaterialEntity.cpp  FkRenderContext.cpp  FkRenderEntity.cpp  FkRenderRequest.cpp  FkTexEntity.cpp  FkTransEntity.cpp
src/FkGraphic/include/: FkAnyCompo.h  FkBufCompo.h  FkBufDeviceQuark.h  FkBufferComponent.h  FkCanvasMatProgram.h  FkCanvasMosaicProgram.h  FkCatmullRomPath.h  FkCharMapCompo.h  FkColorCompo.h  FkColorComponent.h  FkColorValue.h  FkContextCompo.h  FkCoordinateCompo.h  FkCoordinateValue.h  FkCropComponent.h  FkDeviceEntity.h  FkDeviceImage.h  FkDeviceImageCompo.h  FkEnvEntity.h  FkFboCompo.h  FkFilePathCompo.h  FkFloatVec2Compo.h  FkFormatCompo.h  FkFuncCompo.h  FkGLDefinition.h  FkGLEnvAtom.h  FkGenIDProto.h  FkGraphicCanvasQuark.h  FkGraphicComponent.h  FkGraphicContext.h  FkGraphicContextQuark.h  FkGraphicEntity.h  FkGraphicFBOQuark.h  FkGraphicFrameObject.h  FkGraphicLayer.h  FkGraphicLayerPrt.h  FkGraphicLayerQuark.h  FkGraphicMVPAtom.h  FkGraphicMVPQuark.h  FkGraphicMatAndroidProgram.h  (+117 more)
src/FkGraphic/interface/: FkDeviceImage.cpp
src/FkHook/: CMakeLists.txt
src/FkMain/: CMakeLists.txt
src/al_bitmap/: CMakeLists.txt  LICENSE
src/al_codec/: CMakeLists.txt
src/al_common/: CMakeLists.txt
src/al_graphic/: CMakeLists.txt
src/al_image/: CMakeLists.txt
src/codec/: CMakeLists.txt
src/common/: CMakeLists.txt
src/glm/: CMakeLists.txt  Makefile
src/render/: CMakeLists.txt
(+2122 files in other folders)
